@@ -95,6 +95,7 @@ Changelog for 1.3.31
 * Fixed handling of translation strings in Contact Search (Chris T, 3604721)
 * Fixed handling of spaces in debit/credit cols/gl (Chris T, 3607219)
 * Fixed handling of invoice numbers on recurring (Chris T, 3602382)
+* Fixed language code changes delayed (Chris T, 3607220) 
 
 Changelog for 1.3.30
 * Documented behavior of Outstanding Summary report (Chris T, 3601314)
